2008-07-20  Alper KANAT  <alperkanat@gmail.com>

	* Committing the project to its own server for the first time..

2008-07-16  Alper KANAT  <alperkanat@gmail.com>

	* extra/tag_cloud.py: Fixed a small bug that occurs when a small number of
	tags exist.
	* templates/users/profile.html: Profile avatar shows the gravatar when
	gravatar url entered.

2008-07-08  Alper KANAT  <alperkanat@gmail.com>

	* extra/tag_cloud.py: Fixed a small bug that occurs when no tag exist.
	* settings_.py: Forgot to add tags app and DEFAULT_AVATAR variable to
	settings.py

2008-07-05  Alper KANAT  <alperkanat@gmail.com>

	* media/css/style.css, blog/templatetags/blog_filters.py,
	templates/blog/homepage.html, templates/blog/pagination.html: Pagination
	works very well now..

2008-07-04  Alper KANAT  <alperkanat@gmail.com>

	* extra/search.py, extra/messages.py, blog/views.py, blog/urls.py,
	templates/blog/sidebar.html: Search works! :)

2008-07-02  Alper KANAT  <alperkanat@gmail.com>

	* media/images/badges, templates/blog/supported.html: All badges are now
	stored on the localhost.. Some of them are renewed and some are deleted..
	* media/js/ibox: iBox is used for JS dialogs.. Nice :)
	* media/css/style.css, users/views.py, users/urls.py,
	templates/users/profile.html: Profile is complete now!
	* extra/gravatar.py: Will include all methods for gravatar support..

2008-07-01  Alper KANAT  <alperkanat@gmail.com>

	* media/images/gravatar.jpg: Gravatar support is being added.. (jQuery UI)
	* media/css/style.css, templates/users/profile.html, users/urls.py,
	users/views.py: Information tables in profile works great now..
	* REQUIREMENTS: python-simplejson added as a dependency.. (converting
	python objects directly to json)

2008-06-30  Alper KANAT  <alperkanat@gmail.com>

	* media/images/calendar_today.png, blog/templatetags/blog_filters.py,
	extra/webcal.py, extra/mail.py, extra/messages.py: Calendar also shows
	current date and profiles can save information now..