@@ -35,11 +35,3 @@ class Comments(models.Model):
 		ordering = ["-datetime"]
 		verbose_name = "Comment"
 		verbose_name_plural = "Comments"
-	
-	class Admin:
-		date_hierarchy = "datetime"
-		list_display = ("get_entry_name", "get_author_info", "get_datetime", "published", "notification",)
-		list_filter = ("published",)
-		list_per_page = settings.ADMIN_LIST_PER_PAGE
-		ordering = ("-datetime")
-		search_fields = ("entry__title", "author__username", "content")
